--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div id="app"></div>
 
+    <p class="hint">Press <i>space</i> key to toggle walls</p>
     <script src="build/bundle.js"></script>
 </body>
 </html>
